Fixed display issue with table for skills on smaller screens. Now just hides a coloum

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,3 +259,9 @@ html, body {
   margin-right:10px;
   float:left;
 }
+
+@media screen and (max-width: 350px) {
+    .hide-super-small {
+        display: none !important;
+    }
+}
